--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>HoneyComb</title>
-  <link href="../static/application/application.css" rel="stylesheet"></head>
+  <link href="/application/application.css" rel="stylesheet"></head>
   <body>
-    <script type="text/javascript" src="../static/commons/commons.js"></script>
-    <script type="text/javascript" src="../static/application/application.js"></script>
+    <script type="text/javascript" src="/commons/commons.js"></script>
+    <script type="text/javascript" src="/application/application.js"></script>
   </body>
 </html>
